fix sticky menu bug on mobile

--- a/ui/src/app/commons/components/main-menu/main-menu.component.css
+++ b/ui/src/app/commons/components/main-menu/main-menu.component.css
@@ -5,7 +5,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
   top: 0;
 }
 
