--- a/ui/src/app/customer-area/components/customer-area/customer-area.component.css
+++ b/ui/src/app/customer-area/components/customer-area/customer-area.component.css
@@ -1,3 +1,7 @@
+.content-body div {
+  padding-top: 50px;
+}
+
 @media (min-width:600px) {
   .main-title{
     font-size: 4rem;
